--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2 style="margin-bottom: 0;">Get In Touch</h2>
       <h3>If you want to win your rec hockey league.</h3>
       <p>Love hockey and need some coding done? We can talk programming on the bench in between shifts!</p>
-      <a style="margin-top: 20px;" href="#" class="myButton">CONTACT ME</a>
+      <a style="margin-top: 20px;" href="mailto:lfraulin@uwo.ca" class="myButton">CONTACT ME</a>
     </div>
   </div>
 
